<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">


    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="86dp"
        android:layout_height="60dp"
        android:src="@drawable/homeicon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="183dp"
        android:layout_height="53dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/careview"
        android:textSize="30sp"
        android:textColor="@color/black_overlay"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="302dp"
        android:layout_height="176dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="33dp"
        android:text="@string/welcome"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="12dp"
        android:text="@string/offers"
        android:textAlignment="center"
        android:textColor="@color/black_overlay"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="148dp"
        android:layout_height="163dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        android:src="@drawable/home"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:contentDescription="@string/image" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="162dp"
        android:layout_height="159dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="13dp"
        android:src="@drawable/drug"
        android:contentDescription="@string/image"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="150dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:text="@string/gummy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="164dp"
        android:layout_height="36dp"
        android:layout_marginStart="67dp"
        android:text="@string/VitC"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="146dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:text="@string/price1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="159dp"
        android:layout_height="36dp"
        android:layout_marginStart="71dp"
        android:text="@string/price2"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="63dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/image"
        android:src="@drawable/ava"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>